@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-01-06 Kimmo
+ TODO: [ 1489875 ] Mimimum height for location pane visible area indicator
+  Src: LocationView.cpp
+
 2007-01-05 Kimmo
  PATCH: [ 1628203 ] Reduce options caching in MergeEditView
   Src: MergeEditView.cpp MergeEditView.h
